2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough), (clearlooks_draw_slider),
	(clearlooks_draw_progressbar_fill):
	Better scale trough.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_spinbutton), (clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Old looking scrollbar sliders & steppers.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	Old looking scrolled window.

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough),
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	First implementation of the old scrollbar, 
	it is breaking Inverted and maybe Glossy (maybe Gummy? :) )

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Fix button inset.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_checkbox):
	The inset was broken (ie. invisible).

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button):
	Fixes the right shadow.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button):
	Remove bogus debug code.

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	More visual fixes.
